Tue May 05 02:05:27 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Update documentation to reflect that
	  the database passed to QueryParser::set_database() is no longer
	  used to expand wildcards and partial terms.

Mon May 04 11:32:40 GMT 2015  Olly Betts <olly@survex.com>

	* api/postlist.cc,api/postlist.h,common/remoteprotocol.h,matcher/,
	  net/serialise.cc,tests/api_backend.cc: Fix sort by value when
	  multiple databases are in use and one or more are remote.  Fixes
	  #674, reported by Dylan Griffith.

Sun May 03 12:41:58 GMT 2015  Olly Betts <olly@survex.com>

	* docs/deprecation.rst,include/xapian/queryparser.h,
	  queryparser/queryparser.cc,queryparser/queryparser.lemony,
	  queryparser/queryparser_internal.h,tests/queryparsertest.cc:
	  Allow setting the expansion limits and types for wildcards
	  and partial terms in the QueryParser independently.  Partial
	  terms now default to the 100 most frequent matching terms.
	  Deprecate set_max_wildcard_expansion() in favour of new
	  set_max_expansion() method which can set expansion limits
	  for partial terms too.  Completes #608.

Sat May 02 09:20:30 GMT 2015  Olly Betts <olly@survex.com>

	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
	  include/xapian/query.h,queryparser/queryparser.lemony,
	  tests/api_query.cc: Add a choice of ways to apply the limit on
	  wildcard expansion.  Fixes #608, reported by boomboo.

Fri May 01 14:53:16 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Reenable replicate3 for glass, as it no
	  longer fails.

Fri May 01 13:38:48 GMT 2015  Olly Betts <olly@survex.com>

	* common/autoptr.h: Just map AutoPtr to std::unique_ptr now we require
	  C++11.

Fri May 01 13:33:28 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc,net/progclient.cc: IRIX is dead, so remove
	  lingering traces of support for SGI's compiler.

Fri May 01 08:59:13 GMT 2015  Olly Betts <olly@survex.com>
